src/objects/ConsignmentItem__c.object
<CustomObject>
    <fields>
        <fullName>Consignment__c</fullName>
        <label>Consignment</label>
        <referenceTo>Consignment__c</referenceTo>
        <relationshipLabel>Consignment Items</relationshipLabel>
        <relationshipName>Consignment_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consignment Items</relationshipLabel>
        <relationshipName>Consignment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Consignment Item</label>
    <nameField>
        <label>ConsignmentItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consignment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>